Added run in makefile

--- a/Week 1/My_code/makefile
+++ b/Week 1/My_code/makefile
@@ -21,6 +21,9 @@ $(ODIR)/%.o: $(SDIR)/%.c $(DEPS)
 test: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
+run: test
+	./test -f M1C_S2.pdb
+
 .PHONY: clean
 
 clean:
