--- a/Week 1/My_code/makefile
+++ b/Week 1/My_code/makefile
@@ -1,7 +1,7 @@
 IDIR =./include
 SDIR =./src
 CC=gcc
-CFLAGS=-I$(IDIR)
+CFLAGS=-I$(IDIR) -pg
 
 ODIR=./obj
 LDIR =./lib
@@ -24,7 +24,17 @@ test: $(OBJ)
 run: test
 	./test -f M1C_S2.pdb
 
+run_silent: test
+	./test -f M1C_S2.pdb > /dev/null
+
+gmon.out: run_silent
+
+perf: gmon.out test
+	gprof test gmon.out > perf_analysis.txt
+
 .PHONY: clean
 
 clean:
 	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~ 
+	rm -f gmon.out perf_analysis.txt
+	rm -f test
