Added verbosity control Modified the input module and introduced PDB_reader_universal for handling differently ordered input. Modified the makefile Added more pdb for analysis

--- a/Week 1/My_code/makefile
+++ b/Week 1/My_code/makefile
@@ -22,10 +22,10 @@ test: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 run: test
-	./test -f M1C_S2.pdb
+	./test -f M1C_S2.pdb -c -v3
 
 run_silent: test
-	./test -f M1C_S2.pdb > /dev/null
+	./test -f M1C_S2.pdb
 
 gmon.out: run_silent
 
