Added empty_stack fuctionality. Added ability to process each configuration in the input PDB file. Added -h or help in getopt Added functionality ot output statistics in terms of persentage instead of numbers.

--- a/Week 1/My_code/makefile
+++ b/Week 1/My_code/makefile
@@ -25,9 +25,10 @@ run: test
 	./test -f M1C_S2.pdb -c -v3
 
 run_silent: test
-	./test -f M1C_S2.pdb
+	./test -f M1A_S2_16.pdb -o out.pdb
 
 gmon.out: run_silent
+
 
 perf: gmon.out test
 	gprof test gmon.out > perf_analysis.txt
