Rebased functions on adjacency matrix. Fixed bug which was responsible for reporting smaller cluster sizes due to considering connection direction in an undirected graph

--- a/CPP_code/makefile
+++ b/CPP_code/makefile
@@ -3,14 +3,14 @@ SDIR =./src
 ODIR=./obj
 LDIR =./lib
 CC=g++
-CFLAGS=-I$(IDIR) -DGMX_DOUBLE=0 -fopenmp #-pg -g
+CFLAGS=-I$(IDIR) -DGMX_DOUBLE=0 -fopenmp -mcmodel=medium #-pg -g
 MKFILE_PATH := $(abspath $(lastword $(MAKEFILE_LIST)))
 MKFILE_DIR := $(dir $(MKFILE_PATH))
 LD_LIBRARY_PATH=$(MKFILE_DIR)lib
 
 LIBS=-lgromacs  -lm
 
-_DEPS = DFS_clustering.h HPO.h input.h stack.h output.h graph.h cluster.h
+_DEPS = DFS_clustering.h HPO.h input.h stack.h output.h graph.h cluster.h constants.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
 _OBJ = HPO.o stack.o DFS_clustering.o  input.o  output.o graph.o test.o
@@ -45,7 +45,7 @@ xtc_1001_silent_strong: test
 run_silent: test
 	./test -f ../Datafiles/M1A_S2_16.pdb -o ../Datafiles/test_out.pdb
 
-gmon.out: xtc_1_silent
+gmon.out: xtc_1001_silent
 
 perf: gmon.out test
 	gprof test gmon.out > perf_analysis.txt
@@ -57,3 +57,5 @@ clean:
 	rm -f gmon.out perf_analysis.txt
 	rm -f test
 	rm -f ../Datafiles/test_out.pdb
+	rm -f cluster_max_size.dat
+	rm -f cluster_statistics.dat
