Removed the libgromacs file and instead added the instructions to install the libgromacs using apackage manager.
Changed charge.cpp to print the coordination number of the K/COUNTERION molecule to the output PDB as residue name = 'K#' where '#' is the coordination number.

Added Kstats section to the Jupyter Notebook.

--- a/bin/makefile
+++ b/bin/makefile
@@ -40,7 +40,7 @@ xtc_1001: test
 	./test -f ../ExampleData/M2A_S3_1001_Avi.xtc -t ../ExampleData/M2A_S3.top -o ../ExampleData/test_out.pdb -v2
 
 xtc_1001_silent: test
-	./test -f ../ExampleData/M2A_S3_1001_Avi.xtc -t ../ExampleData/M2A_S3.top -o ../ExampleData/test_out.pdb -m 10
+	./test -f ../ExampleData/M2A_S3_1001_Avi.xtc -t ../ExampleData/M2A_S3.top -o ../ExampleData/test_out_PBC.pdb -m 10
 
 xtc_1001_ring: test
 	./test -f ../ExampleData/M2A_S3_1001_Avi.xtc -t ../ExampleData/M2A_S3.top -o ../ExampleData/test_out.pdb -m 10 -r
