Added more make options to the makefile
Added colour.pml to colour pottasium molecules according to their HPO coordination number

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ gromacs_install
 gromacs-2021.1
 .vscode
 Old_code
-ExampleData
+ExampleData/*
 Docs
 .ipynb_checkpoints/Clustering_Metric-checkpoint.ipynb
+
+!ExampleData/colour.pml
