Added code to colour upto 10 clusters of a config

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ ExampleData/*
 Docs
 .ipynb_checkpoints/Clustering_Metric-checkpoint.ipynb
 
-!ExampleData/colour.pml
+!ExampleData/colour_counterion.pml
+!ExampleData/colour_ion.pml
