Added funtionality ot perform ring search on a cluster instead of a configuration

--- a/bin/makefile
+++ b/bin/makefile
@@ -61,6 +61,9 @@ minicell_xtc: test
 bsh: test
 	./test -f ../ExampleData/M1B_Sh_avi.xtc -t ../ExampleData/run156.top -o ../ExampleData/M1B_Sh_out.pdb -m 10 
 
+bsh_r: test
+	./test -f ../ExampleData/M1B_Sh_avi.xtc -t ../ExampleData/run156.top -r 
+
 bs1: test
 	./test -f ../ExampleData/M1B_S1_avi.xtc -t ../ExampleData/run312.top -o ../ExampleData/M1B_S1_out.pdb -m 10 
 
